			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02: *********************************

************************* END OF Version 8.01, GNU RELEASE *********************************
************************* Version 8.01ax: *********************************

IMP: (12/22/04, GVG): Change should leave object(s) selected (Bug #129)

IMP: (12/22/04, GVG): New scale for 3D panning.

IMP: (12/22/04, GVG): New names for VTH/VTL/OD18 pure nodes to be consisten with rest of names.

IMP: (12/22/04, GVG): DRC Schematic, improving error messages if objects touch (triggered by Bug #126)

BUG: (12/22/04, SMR) Busses connecting at a Wire Con are flagged as DRC errors (Bug #126).
FIX: In drc.Schematic.checkPolygonVicinity(), consider WireCon to connect arcs.

IMP: (12/21/04, SMR) When going down hierarchy, only ask for entry in arrayed node if waveform is present.

IMP: (12/21/04, SMR) Added Help/Load Built-in Libraries/MOSIS CMOS Pads to get the pads library.

BUG: (12/20/04, SMR) Offset text on rotated nodes is not drawn right.
FIX: In Geometric.addDisplayableVariables(), handle style rotation and style offset.
     In ElectricObject.getPolyList(), handle style offset.
     In ElectricObject.addDisplayableVariables(), handle style rotation.
     In PolyBase.rotateType(), handle transposed rotation better.
     In Technology.getShapeOfNode(), use untransformed bounds of node for text location.

BUG: (12/20/04, GVG) Extra polyehedra to describe gate channel were wrong if transistors were rotated (Bug #124)
FIX: Extra geometries are created after polygons are rotated.

IMP: (12/20/04, GVG) Ability to open libraries without providing extension. Extension will be added based on
     DEFAULTELIB variable. (Bug #95)

IMP: (12/20/04, GVG) Adding error logger to ELIB/ELIB1 if readNodeInst/readArcInst returns true
     otherwise users might skip the error.
